--- a/src/templates/pages/elements/linkList.html
+++ b/src/templates/pages/elements/linkList.html
@@ -69,7 +69,7 @@ If you wish to remove the outer borders and border-radi, use the modifier `.link
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <ul class="linkList linkList--stripped">
-            <li class="linkList__item">
+            <li class="linkList__item linkList__item--active">
                 <a class="linkList__link" href="#">Oxygen</a>
             </li>
             <li class="linkList__item">
@@ -93,7 +93,7 @@ If you wish to remove the link list background color,use the modifier `.linkList
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <ul class="linkList linkList--transparent">
-            <li class="linkList__item">
+            <li class="linkList__item linkList__item--active">
                 <a class="linkList__link" href="#">Oxygen</a>
             </li>
             <li class="linkList__item">
@@ -117,7 +117,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
 <div class="documentation__block">
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <ul class="linkList linkList--large linkList--transparent linkList--stripped linkList--arrowsRight">
-            <li class="linkList__item">
+            <li class="linkList__item linkList__item--active">
                 <a class="linkList__link" href="#">Oxygen</a>
             </li>
             <li class="linkList__item">
@@ -141,7 +141,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -159,7 +159,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRight">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -177,7 +177,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRightDown">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -195,7 +195,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRightUp">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -213,7 +213,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsLeft">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -231,7 +231,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -249,7 +249,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRight">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -267,7 +267,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRightDown">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -285,7 +285,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRightUp">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -303,7 +303,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsLeft">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -321,7 +321,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -339,7 +339,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRight linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -357,7 +357,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRightDown linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -375,7 +375,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsRightUp linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -393,7 +393,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--arrowsLeft linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -411,7 +411,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -429,7 +429,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRight linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -447,7 +447,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRightDown linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -465,7 +465,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsRightUp linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
@@ -483,7 +483,7 @@ Most link list modifiers can be combined. For example it’s possible to produce
     <div class="documentation__block">
         <div class="documentation__example" data-printcode="language:markup;">
             <ul class="linkList linkList--large linkList--arrowsLeft linkList--dark">
-                <li class="linkList__item">
+                <li class="linkList__item linkList__item--active">
                     <a class="linkList__link" href="#">Oxygen</a>
                 </li>
                 <li class="linkList__item">
